# multiaspect-aes

./: .gitignore  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
api/: Dockerfile  alembic.ini  main.py  pyproject.toml  tasks.py  wait-for-db-and-migrate.sh
api/db/: models.py  session.py
api/db/migrations/: env.py
model/: __init__.py  model.py
notebooks/aes/: aems-ellipse.ipynb  baseline.ipynb  corruption.ipynb  dataset_split_augmentation.ipynb  deberta-2-asap.ipynb  deberta-2-dress-complex.ipynb  deberta-2-dress-plain.ipynb  deberta_bce_asap.ipynb  deberta_mse_asap.ipynb  essays_for_llm_feedback.ipynb  nlp_boosting.ipynb  nlp_features_2.ipynb  r2_bert_clean_w_gen.ipynb  t5-base.ipynb  t5-small.ipynb
notebooks/feedback/: deepseek_r1_14b_gguf.ipynb  meta-llama-3-1-8b-instruct-quantized-w4a16.ipynb  mistral_nemo_gguf_4.ipynb  qwen2-5-1-5b-instruct.ipynb
streamlit/: Dockerfile  __init__.py  main.py  pyproject.toml
worker/: Dockerfile  __init__.py  pyproject.toml  tasks.py
