[tool.poetry]
name = "api"
version = "0.1.0"
description = "api for multiaspect aes"
authors = ["maxodum <maxim.dumenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
celery = {extras = ["redis"], version = "^5.5.2"}
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
prometheus-client = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
