[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = ""
authors = ["maxodum <maxim.dumenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
streamlit = "^1.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
