[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["maxodum <maxim.dumenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.5.2"}
torch = "^2.7.0"
transformers = {extras = ["sentencepiece"], version = "^4.51.3"}
numpy = "^2.2.6"
protobuf = "^6.31.0"
accelerate = "^1.7.0"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
